added incident deletion
